src/objects/SSI__c.object
<CustomObject>
    <description>SSI: To record each SSI record</description>
    <fields>
        <fullName>CarModelCheck_Status__c</fullName>
        <label>CarModelCheck Status</label>
        <picklist>
            <picklistValues>
                <fullName>Valid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <description>Company Name from the sales contract</description>
        <label>CompanyName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractDate__c</fullName>
        <description>The start date for the sales contract.</description>
        <label>ContractDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CustomerName__c</fullName>
        <description>Customer Name from the sales contract</description>
        <label>CustomerName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerTitle__c</fullName>
        <description>Customer Title from the sales contract</description>
        <label>CustomerTitle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealerCheck_Status__c</fullName>
        <label>DealerCheck Status</label>
        <picklist>
            <picklistValues>
                <fullName>Valid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DealerName__c</fullName>
        <description>The dealer name on the sales record</description>
        <label>DealerName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <description>Sales dealer code in CRM</description>
        <label>Dealer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HandoverDate__c</fullName>
        <description>Date of the vehicle-handover to the customer</description>
        <label>HandoverDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HomeMobilePhone__c</fullName>
        <description>Private Phone Number from the sales contract</description>
        <label>HomeMobilePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Invalid_Dealer_Review__c</fullName>
        <description>Data Quality Check rule</description>
        <label>Invalid Dealer Review</label>
        <picklist>
            <picklistValues>
                <fullName>Accept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invalid_Vehicle_Model_Review__c</fullName>
        <description>Invalid Vehicle Model</description>
        <label>Invalid Vehicle Model Review</label>
        <picklist>
            <picklistValues>
                <fullName>Accept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InvoiceDate__c</fullName>
        <description>Date for invoice</description>
        <label>InvoiceDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Need_2nd_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>sinotrust user greate 2nd survey task</description>
        <label>Need 2nd Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OfficePhone__c</fullName>
        <description>Office Phone Number from the sales contract</description>
        <label>OfficePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OriginalCustomerName__c</fullName>
        <label>OriginalCustomerName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalOfficePhone__c</fullName>
        <label>OriginalOfficePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Original_HomeMobilePhone__c</fullName>
        <label>Original HomeMobilePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ownertype__c</fullName>
        <description>Whether the vehicle is private or company owned</description>
        <label>Ownertype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <description>The sales person involved in the contract</description>
        <label>Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Original</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Valid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SuspectCarModel_Review__c</fullName>
        <label>SuspectCarModel Review</label>
        <picklist>
            <picklistValues>
                <fullName>Accept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SuspectDealer_Review__c</fullName>
        <label>SuspectDealer Review</label>
        <picklist>
            <picklistValues>
                <fullName>Accept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suspect_Reason__c</fullName>
        <description>Data Quality Check rule</description>
        <label>Suspect Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VehicleCBUCKD__c</fullName>
        <description>Vehicle manufacture type according to sales contract</description>
        <label>VehicleCBUCKD</label>
        <picklist>
            <picklistValues>
                <fullName>CBU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CKD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VehicleDesc__c</fullName>
        <description>Vehicle description according to sales contract</description>
        <label>VehicleDesc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VehicleID__c</fullName>
        <description>Vehicle linked to the sale in the system.</description>
        <label>VehicleID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VehicleModel__c</fullName>
        <description>Vehicle model according to sales contract</description>
        <label>VehicleModel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VehicleUSvin__c</fullName>
        <description>Vehicle US VIN according to sales contract</description>
        <label>VehicleUSvin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SSI</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CustomerName__c</columns>
        <columns>OfficePhone__c</columns>
        <columns>HomeMobilePhone__c</columns>
        <columns>Dealer__c</columns>
        <columns>DealerName__c</columns>
        <columns>Suspect_Reason__c</columns>
        <columns>Status__c</columns>
        <columns>DealerCheck_Status__c</columns>
        <columns>CarModelCheck_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Valid_Vehicle_Model</fullName>
        <columns>NAME</columns>
        <columns>CustomerName__c</columns>
        <columns>OfficePhone__c</columns>
        <columns>HomeMobilePhone__c</columns>
        <columns>Dealer__c</columns>
        <columns>DealerName__c</columns>
        <columns>Invalid_Vehicle_Model_Review__c</columns>
        <columns>Suspect_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Valid Vehicle Model</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Original_SSI_Record</fullName>
        <columns>NAME</columns>
        <columns>CarModelCheck_Status__c</columns>
        <columns>CustomerName__c</columns>
        <columns>DealerCheck_Status__c</columns>
        <columns>Status__c</columns>
        <columns>SuspectDealer_Review__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Original</value>
        </filters>
        <label>Original SSI Record</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Suspect_CarModel</fullName>
        <columns>NAME</columns>
        <columns>CustomerName__c</columns>
        <columns>CustomerTitle__c</columns>
        <columns>OfficePhone__c</columns>
        <columns>HomeMobilePhone__c</columns>
        <columns>DealerName__c</columns>
        <columns>SuspectCarModel_Review__c</columns>
        <columns>VehicleCBUCKD__c</columns>
        <columns>VehicleUSvin__c</columns>
        <columns>VehicleModel__c</columns>
        <columns>VehicleDesc__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CarModelCheck_Status__c</field>
            <operation>equals</operation>
            <value>Suspect</value>
        </filters>
        <filters>
            <field>SuspectCarModel_Review__c</field>
            <operation>equals</operation>
        </filters>
        <label>Suspect CarModel</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Suspect_Dealer</fullName>
        <columns>NAME</columns>
        <columns>CustomerName__c</columns>
        <columns>DealerCheck_Status__c</columns>
        <columns>SuspectDealer_Review__c</columns>
        <columns>Dealer__c</columns>
        <columns>CustomerTitle__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DealerCheck_Status__c</field>
            <operation>equals</operation>
            <value>Suspect</value>
        </filters>
        <filters>
            <field>SuspectDealer_Review__c</field>
            <operation>equals</operation>
        </filters>
        <label>Suspect Dealer</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SSI-{000000}</displayFormat>
        <label>SSI No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SSI</pluralLabel>
    <recordTypes>
        <fullName>SSI</fullName>
        <active>true</active>
        <label>SSI</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Comments_mandatory_SuspectDealer_Review</fullName>
        <active>true</active>
        <description>when field SuspectDealer Review is &apos;Accept&apos;, &apos;Comments&apos; fields can not be blank.</description>
        <errorConditionFormula>AND( RecordType.DeveloperName  = &apos;SSI&apos; ,ISPICKVAL(SuspectDealer_Review__c, &apos;Accept&apos;) , ISBLANK( Comments__c ) )</errorConditionFormula>
        <errorMessage>&apos;Comments&apos; fields can not be blank when field SuspectDealer Review is &apos;Accept&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Comments_mandatory_Suspectcarmodel</fullName>
        <active>true</active>
        <description>When field SuspectCarModel Review is &apos;Accept&apos;, Field &apos;Comments&apos; can not be blank</description>
        <errorConditionFormula>AND( ISPICKVAL( SuspectCarModel_Review__c ,&apos;Accept&apos;) , ISBLANK( Comments__c ) )</errorConditionFormula>
        <errorMessage>SuspectCarModel Review is &apos;Accept&apos;, Field &apos;Comments&apos; can not be blank</errorMessage>
    </validationRules>
</CustomObject>